@@ -1,5 +1,6 @@
 useDynLib(oce)
 export(
+       "+.section",
        add.column,
        as.coastline,
        as.ctd,
