@@ -1,4 +1,5 @@
 0.1-77
+- add "+.section", a more convenient way to build sections from stations
 - rework summary() for tidem, ctd, section, tdr, sealevel, coastline, topo and lobo
 - as.sealevel(): rename sampling.interval as deltat, and infer it from data if possible
 
